--- a/index.html
+++ b/index.html
@@ -410,7 +410,58 @@
 
             <footer>
 
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-2"><img src="images/footer-logo.png" alt=""></div>
+                        <div class="col-md-3">
+                            <h3 class="footer-heading">Get Started/Sign Up </h3>
 
+                            <ul class="footer-links">
+                                <li><a href="#">Why School Uniforms Company</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-2">
+                            <h3 class="footer-heading">More Ways To Shop</h3>
+                            <ul class="footer-links">
+                                <li><a href="#">Shop By School</a></li>
+                                <li><a href="#">Request A Catalog</a></li>
+                                <li><a href="#">Customer Service</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3">
+                            <h3 class="footer-heading">Contact Us </h3>
+                            <ul class="footer-links">
+                                <li><a href="#">Track Your Order</a></li>
+                                <li><a href="#">Orders, Shipping & Returns</a></li>
+                                <li><a href="#">Size Chart </a></li>
+                                <li><a href="#">Schoolbox </a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-2">
+                            <h3 class="footer-heading">About Us</h3>
+                            <ul class="footer-links">
+                                <li><a href="#">Our Guarantee</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Wholesale Inquiry </a></li>
+                               
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="social-links">
+                        <a href="#" class="facebook"></a>
+                        <a href="#" class="whatsapp"></a>
+                        <a href="#" class="youtube"></a>
+                        <a href="#" class="googleplus"></a>
+                        <a href="#" class="twitter"></a>
+
+                        <span class="fb-txt">LIKE US on FACEBOOK  <a href="#" class="f-like"></a> <a href="#" class="f-share"></a></span>
+                    </div>
+
+                    <div class="copy-right">
+                        &copy;Powered by EdvantagePoint
+                    </div>
+                </div>
 
 
                 
