--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <section class="brands">
                 <div class="container">
                     <div class="brands-wrap">
-                        <h2 class="title-2">Our Brands <a href="#"></a></h2>
+                        <h2 class="title-2">Our Brands <a href="#">See All</a></h2>
 
                         <ul class="products-list owl-carousel owl-theme">
                             <li>
@@ -355,7 +355,7 @@
 
             <section>
                <div class="container">
-                    <h2 class="title-2">Avail our Services <a href="#"></a></h2>
+                    <h2 class="title-2">Avail our Services <a href="#">See All</a></h2>
 
                     <ul class="row services-list">
                         <li class="col-md-4">
