--- a/index.html
+++ b/index.html
@@ -58,8 +58,13 @@
                               </div>
                             <a class="navbar-brand" href="#"><img  src="images/logo.png" alt="EDKart">
                             </a>
-
-                            <button class="top-btn mobile-only pull-right ">Sign Up/ Sign in</button>
+                            <a class="top-btn anim-btn mobile-only pull-right " href="#">
+                                    <span>
+                                      <span>
+                                        <span>Sign Up/ Sign in</span>
+                                      </span>
+                                    </span>
+                                  </a>
                           </div>
                           <div  class="navbar-collapse collapse desktop-only">
                                 <a class="top-btn anim-btn" href="#">
