--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     
                                     <div class="search-wrap">
                                         <input type="text" placeholder="Enter school name to view it’s merchandise…">
-                                        <a href="javascript:void(0)" class="search-btn"></a>
+                                        <a href="school-listing.html" class="search-btn"></a>
                                     </div>
 
                                     <h1 class="lg-title">Order school merchandise online</h1>
