--- a/login-modal.html
+++ b/login-modal.html
@@ -338,7 +338,7 @@
 
                                 <div class="login-btn-wrap">
                                     <span>You will be sent an OTP for verification</span>
-                                    <a href="#" class="secondary-btn pull-right">Sign In</a>
+                                    <a href="login-otp-modal.html" class="secondary-btn pull-right">Sign In</a>
 
                                 </div>
 
@@ -362,5 +362,12 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/owl.carousel.js"></script>
         <script src="js/custom.js"></script>
+        <script>
+        
+            $(document).ready(function(){
+
+                $('#login-modal').modal('show');
+            });
+        </script>
     </body>
 </html> 
