--- a/school-listing.html
+++ b/school-listing.html
@@ -338,7 +338,7 @@
 
                                 <div class="login-btn-wrap">
                                     <span>You will be sent an OTP for verification</span>
-                                    <a href="#" class="secondary-btn pull-right">Sign In</a>
+                                    <a href="login-modal.html" class="secondary-btn pull-right">Sign In</a>
 
                                 </div>
 
