--- a/login-otp-modal.html
+++ b/login-otp-modal.html
@@ -346,7 +346,7 @@
  
                                 <div class="login-btn-wrap mt-20">
                                     <a href="#" class="link-blue pt-5">RESEND OTP</a>
-                                    <a href="login-message-modal.html" class="secondary-btn ml-100">VERIFY</a>
+                                    <a href="login-message-modal.html" class="secondary-btn verify-btn">VERIFY</a>
 
                                 </div>
                                 </div>
