--- a/school-listing.html
+++ b/school-listing.html
@@ -338,13 +338,13 @@
 
                                 <div class="login-btn-wrap">
                                     <span>You will be sent an OTP for verification</span>
-                                    <a href="login-otp-modal.html" class="secondary-btn pull-right">Sign In</a>
+                                    <a href="login-otp-modal.html" class="secondary-btn login-btn">Sign In</a>
 
                                 </div>
 
-                                <div>
+                                
                                     <a href="#" class="link-blue">Forgot password</a>
-                                </div>
+                                
 
                                 <div class="note-txt">
                                     Once verified & logged In, you will see merchandise items for the school mapped to your Mobile no.
