--- a/login-modal.html
+++ b/login-modal.html
@@ -342,9 +342,10 @@
 
                                 </div>
 
-                                <div>
+                                <div class="fgt-pwd-link">
                                     <a href="#" class="link-blue">Forgot password</a>
-                                </div>
+
+                                </div>  
 
                                 <div class="note-txt">
                                     Once verified & logged In, you will see merchandise items for the school mapped to your Mobile no.
