--- a/school-listing.html
+++ b/school-listing.html
@@ -343,8 +343,10 @@
                                 </div>
 
                                 
+                                <div class="fgt-pwd-link">
                                     <a href="#" class="link-blue">Forgot password</a>
-                                
+
+                                </div>                                
 
                                 <div class="note-txt">
                                     Once verified & logged In, you will see merchandise items for the school mapped to your Mobile no.
