--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <li> <a href="#">Track Orders</a></li>
                                  </ul>
                               </div>
-                            <a class="navbar-brand" href="#"><img  src="images/logo.png" alt="EDKart">
+                            <a class="navbar-brand" href="index.html"><img  src="images/logo.png" alt="EDKart">
                             </a>
                             <a class="top-btn anim-btn mobile-only pull-right " href="#">
                                     <span>
