home page fixes

--- a/index.html
+++ b/index.html
@@ -152,22 +152,26 @@
 
                 <div class="row amenities">
                         <div class="col-xs-3 col-md-3 text-center">
-                             <img src="images/24-7.png" alt="24/7">
+                             <img src="images/24-7.png" alt="24/7" class="desktop">
+                             <img src="images/icon-time.png" alt="24/7" class="mobile">
                             <div class="amenities-name">24/7</div>
 
                         </div>
                         <div class="col-xs-3 col-md-3 text-center">
-                            <img src="images/delivery.png" alt="Quick Delivery">
+                            <img src="images/delivery.png" alt="Quick Delivery" class="desktop">
+                            <img src="images/icon-package.png" alt="Quick Delivery" class="mobile">
                             <div class="amenities-name">Quick Delivery</div>
 
                         </div>
                         <div class="col-xs-3 col-md-3 text-center">
-                            <img src="images/sellers.png" alt="Trusted Sellers">
+                            <img src="images/sellers.png" alt="Trusted Sellers" class="desktop">
+                            <img src="images/icon-sellers.png" alt="Trusted Sellers" class="mobile">
                             <div class="amenities-name">Trusted Sellers</div>
 
                         </div>
                         <div class="col-xs-3 col-md-3 text-center">
-                                <img src="images/payment.png" alt="Easy Payment">
+                                <img src="images/payment.png" alt="Easy Payment" class="desktop">
+                                <img src="images/icon-creditcard.png" alt="Easy Payment" class="mobile">
                                 <div class="amenities-name">Easy Payment </div>
 
                         </div>
