--- a/dummy.html
+++ b/dummy.html
@@ -52,7 +52,7 @@
                                               <li> <a href="#">Track Orders</a></li>
                                                </ul>
                                             </div>
-                                          <a class="navbar-brand" href="#"><img  src="images/logo.png" alt="EDKart">
+                                          <a class="navbar-brand" href="#"><img  src="images/logo.svg" alt="EDKart">
                                           </a>
                                           <a class="top-btn anim-btn mobile-only pull-right " href="#">
                                                   <span>
@@ -104,7 +104,7 @@
 
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-2"><img src="images/footer-logo.png" alt=""></div>
+                                <div class="col-md-2"><img src="images/footer-logo.svg" alt=""></div>
                                 <div class="col-md-3 col-sm-3">
                                     <h3 class="footer-heading">Get Started/Sign Up </h3>
         
