--- a/index.html
+++ b/index.html
@@ -155,25 +155,25 @@
                 <div class="row amenities">
                         <div class="col-xs-3 col-md-3 text-center">
                              <img src="images/24-7.svg" alt="24/7" class="desktop">
-                             <img src="images/icon-time.png" alt="24/7" class="mobile">
+                             <img src="images/icon-time.svg" alt="24/7" class="mobile">
                             <div class="amenities-name">24/7</div>
 
                         </div>
                         <div class="col-xs-3 col-md-3 text-center">
                             <img src="images/delivery.svg" alt="Quick Delivery" class="desktop">
-                            <img src="images/icon-package.png" alt="Quick Delivery" class="mobile">
+                            <img src="images/icon-package.svg" alt="Quick Delivery" class="mobile">
                             <div class="amenities-name">Quick Delivery</div>
 
                         </div>
                         <div class="col-xs-3 col-md-3 text-center">
                             <img src="images/sellers.svg" alt="Trusted Sellers" class="desktop">
-                            <img src="images/icon-sellers.png" alt="Trusted Sellers" class="mobile">
+                            <img src="images/icon-sellers.svg" alt="Trusted Sellers" class="mobile">
                             <div class="amenities-name">Trusted Sellers</div>
 
                         </div>
                         <div class="col-xs-3 col-md-3 text-center">
                                 <img src="images/payment.svg" alt="Easy Payment" class="desktop">
-                                <img src="images/icon-creditcard.png" alt="Easy Payment" class="mobile">
+                                <img src="images/icon-creditcard.svg" alt="Easy Payment" class="mobile">
                                 <div class="amenities-name">Easy Payment </div>
 
                         </div>
