--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                               </div>
                             <a class="navbar-brand" href="index.html"><img  src="images/logo.svg" alt="EDKart">
                             </a>
-                            <a class="top-btn anim-btn mobile-only pull-right " href="#">
+                            <a class="top-btn anim-btn mobile-only pull-right " href="login.html">
                                     <span>
                                       <span>
                                         <span>Sign Up/ Sign in</span>
@@ -67,7 +67,7 @@
                                   </a>
                           </div>
                           <div  class="navbar-collapse collapse desktop-only">
-                                <a class="top-btn anim-btn" href="#">
+                                <a class="top-btn anim-btn" href="login.html">
                                         <span>
                                           <span>
                                             <span>Sign Up/ Sign in</span>
