--- a/otp.html
+++ b/otp.html
@@ -100,7 +100,7 @@
                           </div>
                         </div>
                         <div class="col-md-4">
-                            <div>
+                            <div class="otp-wrapper">
                                 <div class="login-title">ENTER ONE -TIME- PASSWORD (OTP)</div>
                                 <p>OTP has been sent your register mobile number: </p>
                                 <div class="form-controls-wrap">
