--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                                               <li> <a href="#">Track Orders</a></li>
                                                </ul>
                                             </div>
-                                          <a class="navbar-brand" href="#"><img  src="images/logo.svg" alt="EDKart">
+                                          <a class="navbar-brand" href="index.html"><img  src="images/logo.svg" alt="EDKart">
                                           </a>
                                           <a class="top-btn anim-btn mobile-only pull-right " href="#">
                                                   <span>
