profile setting, shipping

--- a/profile-setting.html
+++ b/profile-setting.html
@@ -172,7 +172,7 @@
                                                 </div>
             
                                                 <div class="col-md-7">
-                                                        <ul class="nav nav-tabs nav-tabs-responsive hidden-xs" role="tablist">
+                                                        <ul class="nav nav-tabs nav-tabs-responsive hidden-xs" role="tablist" id="prodDescTab">
                                                                 <li role="presentation" class="active">
                                                                     <a href="#school1"  data-toggle="tab" >Sancta Maria </a>
                                                                 </li>
@@ -390,6 +390,8 @@
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/owl.carousel.js"></script>
+        <script src="js/bootstrap-tabcollapse.js"></script>
+
         <script src="js/custom.js"></script>
     </body>
 </html>
