--- a/dashboard-new-user.html
+++ b/dashboard-new-user.html
@@ -286,6 +286,8 @@
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/owl.carousel.js"></script>
+        <script src="js/bootstrap-tabcollapse.js"></script>
+
         <script src="js/custom.js"></script>
     </body>
 </html>
