--- a/login-message.html
+++ b/login-message.html
@@ -187,12 +187,13 @@
                     </footer>
             </div>
         
-
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!-- Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="js/owl.carousel.js"></script>
+        <script src="js/bootstrap-tabcollapse.js"></script>
+
         <script src="js/custom.js"></script>
     </body>
 </html>
