--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
                          
                 </ol>
            </div>
-           </div10
+        </div>
 
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
